Fix DirectCompositionSurfaceTest.TestMakeCurrent flakiness.

The tasks to delete the window owner threads could be posted to the main
thread after the main thread ran RunUntilIdle. This causes the window
owner threads and their MessagePumpForUI to outlive the main test, and
that causes a DCHECK when the test tries to get rid of the MessageWindow
class atom that the message pump is currently using.

BUG=697929
TBR=stanisc@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2729073002
Cr-Commit-Position: refs/heads/master@{#454475}

Former-commit-id: 3051724ad6cbc2e32743085786bd362bd1f06a61